Ensuring that scroll-bars are always visible when direct edit buttons are visible to avoid flickering when elements are highlighted.

--- a/src-gwt/org/opencms/ade/containerpage/client/ui/css/containerpage.css
+++ b/src-gwt/org/opencms/ade/containerpage/client/ui/css/containerpage.css
@@ -72,6 +72,12 @@ div.optionBar{
 	display: block;
 }
 
+/** Force scroll-bar as long as direct edit buttons are visible to avoid any flickering when elements highlighted. */
+body.toolbarSelection{
+	overflow-y: scroll;
+}
+
+
 div.expired{
 	display: none;
 }
